# traffic_capture

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  format_code.sh  run_checks.sh
.github/workflows/: ci.yml
h/: capture.hpp  cli.hpp
h/export/: pcap.hpp
h/parsers/: frame.hpp  protocol_parser.hpp
h/parsers/L2/: arp.hpp
h/parsers/L3/: ipv4.hpp
src/: CMakeLists.txt  capture.cpp  cli.cpp  main.cpp
src/export/: pcap.cpp
src/parsers/: frame.cpp  protocol_parser.cpp
src/parsers/L2/: arp.cpp
src/parsers/L3/: ipv4.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_loopback_capture.cpp  test_real_capture.cpp
tests/integration/helpers/: packet_sender.hpp  veth_setup.hpp
tests/unit/: CMakeLists.txt  test_arp_parser.cpp  test_cli.cpp  test_frame_parser.cpp  test_ipv4_parser.cpp  test_pcap_writer.cpp
